--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
     <div class="col-lg-4 col-md-6 col-sm-12">
         <section>
             <h2 id="chicken">Chicken</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet aliquam id diam maecenas ultricies mi. Porta lorem mollis aliquam ut porttitor leo a. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. Tristique senectus et netus et malesuada fames ac turpis egestas. Dui accumsan sit amet nulla facilisi morbi tempus iaculis. Dolor sit amet consectetur adipiscing elit ut aliquam purus. Porta non pulvinar neque laoreet suspendisse interdum. Arcu vitae elementum curabitur vitae nunc sed velit dignissim sodales. A scelerisque purus semper eget duis at tellus at. Sed libero enim sed faucibus turpis in eu mi bibendum. Amet consectetur adipiscing elit ut aliquam. Duis at tellus at urna condimentum mattis. Netus et malesuada fames ac turpis egestas. Ac odio tempor orci dapibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet aliquam id diam maecenas ultricies mi. Porta lorem mollis aliquam ut porttitor leo a. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. Tristique senectus et netus et malesuada fames ac turpis egestas.</p>
         </section>
     </div>
 
     <div class="col-lg-4 col-md-6 col-sm-12">
         <section>
             <h2 id="beef">Beef</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet aliquam id diam maecenas ultricies mi. Porta lorem mollis aliquam ut porttitor leo a. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. Tristique senectus et netus et malesuada fames ac turpis egestas. Dui accumsan sit amet nulla facilisi morbi tempus iaculis. Dolor sit amet consectetur adipiscing elit ut aliquam purus. Porta non pulvinar neque laoreet suspendisse interdum. Arcu vitae elementum curabitur vitae nunc sed velit dignissim sodales. A scelerisque purus semper eget duis at tellus at. Sed libero enim sed faucibus turpis in eu mi bibendum. Amet consectetur adipiscing elit ut aliquam. Duis at tellus at urna condimentum mattis. Netus et malesuada fames ac turpis egestas. Ac odio tempor orci dapibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet aliquam id diam maecenas ultricies mi. Porta lorem mollis aliquam ut porttitor leo a. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. Tristique senectus et netus et malesuada fames ac turpis egestas.</p>
         </section>
     </div>
 
     <div class="col-lg-4 col-md-12 col-sm-12">
         <section>
             <h2 id="sushi">Sushi</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet aliquam id diam maecenas ultricies mi. Porta lorem mollis aliquam ut porttitor leo a. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. Tristique senectus et netus et malesuada fames ac turpis egestas. Dui accumsan sit amet nulla facilisi morbi tempus iaculis. Dolor sit amet consectetur adipiscing elit ut aliquam purus. Porta non pulvinar neque laoreet suspendisse interdum. Arcu vitae elementum curabitur vitae nunc sed velit dignissim sodales. A scelerisque purus semper eget duis at tellus at. Sed libero enim sed faucibus turpis in eu mi bibendum. Amet consectetur adipiscing elit ut aliquam. Duis at tellus at urna condimentum mattis. Netus et malesuada fames ac turpis egestas. Ac odio tempor orci dapibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet aliquam id diam maecenas ultricies mi. Porta lorem mollis aliquam ut porttitor leo a. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. Tristique senectus et netus et malesuada fames ac turpis egestas.</p>
         </section>
     </div>
 </body>
